--- a/index.html
+++ b/index.html
@@ -45,94 +45,18 @@
 		<link rel="apple-touch-icon" href="https://vikebot.com/content/vikebot_logo.png">
 
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:700|Roboto:300">
-		
-		<style>
-			body {
-				margin: 0;
-				background-color: #000;
-				overflow: hidden;
-			}
-			div.container {
-				position: absolute;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-			}
-			h1 {
-				font-family: 'Montserrat';
-				font-weight: 700;
-				font-size: 82px;
-				color: #fff;
-				line-height: 90px;
-				letter-spacing: .5px;
-				text-transform: uppercase;
-				text-align: center;
-			}
-			div.box {
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: center;
-			}
-			div.box a {
-				text-decoration: none;
-				padding: 20px 50px;
-				border: 1px solid #646464;
-				display: inline-block;
-				margin: 20px 20px 0 20px;
-			}
-			div.box a:hover {
-				background-color: rgba(255, 255, 255, 0.2);
-			}
-			div.box a * {
-				float: left;
-			}
-			div.box p {
-				font-family: 'Roboto';
-				font-weight: 300;
-				font-size: 48px;
-				color: #646464;
-				line-height: 128px;
-				letter-spacing: .5px;
-				text-align: center;
-				display: inline-block;
-				margin: 0;
-				margin-right: 40px;
-			}
-
-			@media only screen and (max-width: 768px) {
-				h1 {
-					font-size: 32px;
-				}
-				div.box a {
-					padding: 10px 25px;
-					margin: 10px 10px 0 10px;
-				}
-				div.box p {
-					font-size: 18px;
-					line-height: 48px;
-					margin-right: 15px;
-				}
-				div.box img {
-					height: 48px;
-					width: 48px;
-				}
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 	<body>
 		<div class="container">
 			<div>
 				<h1>I want to ...</h1>
 				<div class="box">
-					<a href="https://sdk.wiki.vikebot.com">
+					<a href="https://sdk-wiki.vikebot.com">
 						<p>Play Vikebot</p>
 						<img src="emoji_u270c_1f3fc.png">
 					</a>
-					<a href="https://dev.wiki.vikebot.com">
+					<a href="https://dev-wiki.vikebot.com">
 						<p>Contribute to the project</p>
 						<img src="emoji_u1f92f.png">
 					</a>
