Changed texts in order to better reflect it's purpose

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 	<body>
 		<div class="container">
 			<div>
-				<h1>I want to ...</h1>
+				<h1>Wiki for ...</h1>
 				<div class="box">
 					<a href="https://sdk-wiki.vikebot.com">
-						<p>Play Vikebot</p>
+						<p>Playing</p>
 						<img src="emoji_u270c_1f3fc.png">
 					</a>
 					<a href="https://dev-wiki.vikebot.com">
-						<p>Contribute to the project</p>
+						<p>Contributing</p>
 						<img src="emoji_u1f92f.png">
 					</a>
 				</div>
